--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,6 +3,9 @@
 set-window-option -g mode-keys vi
 set-window-option -g automatic-rename off
 
+# prefix y End copy & exit copy-mode
+bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namespace pbcopy"
+
 # set -g status-bg white
 # set -g status-fg black
 
