--- a/config/dein/plugins.toml
+++ b/config/dein/plugins.toml
@@ -147,7 +147,12 @@ on_ft = 'haml'
 # html/css
 [[plugins]] # Html5
 repo  = 'othree/html5.vim'
-on_ft = 'html'
+hook_add = '''
+  let g:html5_event_handler_attributes_complete = 1
+  let g:html5_rdfa_attributes_complete = 1
+  let g:html5_microdata_attributes_complete = 1
+  let g:html5_aria_attributes_complete = 1
+'''
 
 [[plugins]] 
 repo = 'hail2u/vim-css3-syntax'
