--- a/config/dein/plugins.toml
+++ b/config/dein/plugins.toml
@@ -9,6 +9,9 @@ build = 'make'
 repo = 'Shougo/denite.nvim'
 
 [[plugins]]
+repo = '5t111111/denite-rails'
+
+[[plugins]]
 repo = 'Shougo/deoplete.nvim'
 on_event = 'InsertCharPre'
 hook_add = '''
@@ -59,8 +62,8 @@ hook_add = '''
   let g:vim_tags_auto_generate = 1
 '''
 
-#[[plugins]]
-#repo = 'tomtom/tcomment_vim'
+[[plugins]]
+repo = 'tomtom/tcomment_vim'
 
 [[plugins]]
 repo = 'thinca/vim-ref'
@@ -217,6 +220,9 @@ repo = 'tpope/vim-endwise'
 repo = 'terryma/vim-multiple-cursors'
 
 # syntax
+[[plugins]]
+repo = 'posva/vim-vue'
+
 [[plugins]] # pathogen
 repo = 'tpope/vim-pathogen'
 
@@ -274,6 +280,9 @@ repo = 'haya14busa/vim-asterisk'
 hook_add = '''
 
 '''
+
+# Howm
+repo = 'fuenor/qfixhowm'
 
 # SKK
 [[plugins]]
