--- a/config/dein/plugins.toml
+++ b/config/dein/plugins.toml
@@ -60,12 +60,6 @@ on_event = 'InsertCharPre'
 hook_add = '''
   let g:deoplete#enable_at_startup = 1
   let g:deoplete#auto_complete_delay = 0
-  let g:deoplete#auto_complete_start_length = 1
-  let g:deoplete#enable_camel_case = 0
-  let g:deoplete#enable_ignore_case = 0
-  let g:deoplete#enable_refresh_always = 0
-  let g:deoplete#enable_smart_case = 1
-  let g:deoplete#file#enable_buffer_path = 1
 '''
 
 [[plugins]]
@@ -274,8 +268,21 @@ repo = 'mattn/webapi-vim'
 #[[plugins]]
 #repo = 'fishbullet/deoplete-ruby'
 
+# [[plugins]]
+# repo = 'uplus/deoplete-solargraph'
+
 [[plugins]]
-repo = 'uplus/deoplete-solargraph'
+repo = 'autozimu/LanguageClient-neovim'
+rev = 'next'
+build = 'bash install.sh'
+hook_add = '''
+  let g:LanguageClient_serverCommands = {
+    \ 'ruby': ['solargraph', 'stdio'],
+  \}
+'''
+
+[[plugins]]
+repo = 'junegunn/fzf'
 
 [[plugins]]
 repo = 'tpope/vim-endwise'
