--- a/config/alacritty/alacritty.yml
+++ b/config/alacritty/alacritty.yml
@@ -74,6 +74,7 @@ font:
     x: 0.0
     y: 0.0
 
+  scale_with_dpi: true
   # OS X only: use thin stroke font rendering. Thin strokes are suitable
   # for retina displays, but for non-retina you probably want this set to
   # false.
@@ -188,7 +189,7 @@ visual_bell:
   duration: 0
 
 # Background opacity
-background_opacity: 0.85
+background_opacity: 0.88
 
 # Key bindings
 #
@@ -297,17 +298,31 @@ mouse:
   double_click: { threshold: 300 }
   triple_click: { threshold: 300 }
 
+
+  url:
+    # URL launcher
+    #
+    # This program is executed when clicking on a text which is recognized as a URL.
+    # The URL is always added to the command as the last parameter.
+    launcher: open
+
+    # URL modifiers
+    #
+    # These are the modifiers that need to be held down for opening URLs when clicking
+    # on them. The available modifiers are documented in the key binding section.
+    #modifiers: Control|Shift
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
 
-hide_cursor_when_typing: false
+# hide_cursor_when_typing: false
 
+live_config_reload: true
 # Shell
 #
 # You can set shell.program to the path of your favorite shell, e.g. /bin/fish.
 # Entries in shell.args are passed unmodified as arguments to the shell.
 #
-#shell:
-#  program: /bin/bash
+shell:
+  program: /usr/local/bin/fish
 #  args:
 #    - --login
