--- a/config/dein/plugins.toml
+++ b/config/dein/plugins.toml
@@ -55,15 +55,7 @@ repo = 'neoclide/denite-git'
 #'''
 
 [[plugins]]
-repo = '5t111111/denite-rails'
-
-[[plugins]]
-repo = 'Shougo/deoplete.nvim'
-on_event = 'InsertCharPre'
-hook_add = '''
-  let g:deoplete#enable_at_startup = 1
-  let g:deoplete#auto_complete_delay = 0
-'''
+repo = 'iyuuya/denite-rails'
 
 [[plugins]]
 repo = 'Shougo/neco-vim'
@@ -276,6 +268,17 @@ repo = 'mattn/webapi-vim'
 
 # [[plugins]]
 # repo = 'uplus/deoplete-solargraph'
+[[plugins]]
+repo = 'zchee/deoplete-go'
+on_event = 'InsertEnter'
+on_ft = 'go'
+
+[[plugins]]
+repo = 'zchee/deoplete-jedi'
+on_ft = 'python'
+hook_source = '''
+let g:deoplete#sources#jedi#enable_typeinfo = 0
+'''
 
 [[plugins]]
 repo = 'autozimu/LanguageClient-neovim'
@@ -365,6 +368,15 @@ repo = 'haya14busa/vim-asterisk'
 hook_add = '''
 
 '''
+
+# Keymap
+# [[plugins]]
+# repo = 'rhysd/accelerated-jk'
+# # on_map = {n = '<Plug>'}
+# hook_add = '''
+#   nmap <silent>j <Plug>(accelerated_jk_gj)
+#   nmap <silent>k <Plug>(accelerated_jk_gk)
+# '''
 
 # Howm
 repo = 'fuenor/qfixhowm'
