--- a/.tmux.conf
+++ b/.tmux.conf
@@ -149,7 +149,7 @@ set -g pane-border-fg colour245
 set -g pane-active-border-fg colour39
 
 run-shell "powerline-daemon -q"
-source "/Users/kyo/.pyenv/versions/3.6.2/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
+source ~/.pyenv/versions/3.6.2/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
 set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
 set -g status-left-length 60
