--- a/.tmux.conf
+++ b/.tmux.conf
@@ -13,7 +13,9 @@ set -s escape-time 0
 setw -g window-status-current-attr underscore
 
 # 256色ターミナル
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal screen-256color
+set-option -ga terminal-overrides ",xterm-256color:Tc"
+
 set-option -g default-shell /usr/local/bin/fish
 
 set -g pane-active-border-fg white
