--- a/config/dein/neovim.toml
+++ b/config/dein/neovim.toml
@@ -8,6 +8,7 @@ depends = 'context_filetype.vim'
 on_event = 'InsertEnter'
 hook_source = '''
     let g:deoplete#enable_at_startup = 1
+    " let g:deoplete#enable_at_startup = 0
     let g:deoplete#enable_ignore_case = 1
     let g:deoplete#enable_smart_case = 1
     let g:deoplete#auto_complete_delay = 0
