--- a/.gitconfig
+++ b/.gitconfig
@@ -32,8 +32,6 @@
   tool = vimdiff
 [mergetool]
   path = nvim
-[diff]
-  tool = vimdiff
 [difftool]
   path = nvim
 [gpg]
@@ -42,3 +40,9 @@
 #	gpgsign = true
 [credential]
 	helper = osxkeychain
+[diff]
+  tool = nvimdiff
+[difftool "nvimdiff"]
+  cmd = "nvim -R -d -c \"wincmd l\" -d \"$LOCAL\" \"$REMOTE\""
+[mergetool "nvimdiff"]
+  cmd = "nvim -d -c \"4wincmd w | wincmd J\" \"$LOCAL\" \"$BASE\" \"$REMOTE\"  \"$MERGED\""
