--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,7 +16,9 @@ setw -g window-status-current-attr underscore
 set-option -g default-terminal screen-256color
 set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-set-option -g default-shell /usr/local/bin/fish
+# set-option -g default-shell /usr/local/bin/fish
+set-option -g default-shell "${SHELL}"
+set -g default-command "${SHELL}"
 
 set -g pane-active-border-fg white
 set -g pane-active-border-bg black
