--- a/config/dein/plugins.toml
+++ b/config/dein/plugins.toml
@@ -11,48 +11,62 @@ repo = 'Shougo/denite.nvim'
 [[plugins]]
 repo = 'neoclide/denite-git'
 
-#[[plugins]]
-#repo = 'Shougo/defx.nvim'
-#hook_add = '''
-#autocmd FileType defx call s:defx_my_settings()
-#	function! s:defx_my_settings() abort
-#	  " Define mappings
-#	  nnoremap <silent><buffer><expr> <CR>
-#	  \ defx#do_action('open')
-#	  nnoremap <silent><buffer><expr> l
-#	  \ defx#do_action('open')
-#	  nnoremap <silent><buffer><expr> E
-#	  \ defx#do_action('open', 'vsplit')
-#	  nnoremap <silent><buffer><expr> P
-#	  \ defx#do_action('open', 'pedit')
-#	  nnoremap <silent><buffer><expr> K
-#	  \ defx#do_action('new_directory')
-#	  nnoremap <silent><buffer><expr> N
-#	  \ defx#do_action('new_file')
-#	  nnoremap <silent><buffer><expr> d
-#	  \ defx#do_action('remove')
-#	  nnoremap <silent><buffer><expr> r
-#	  \ defx#do_action('rename')
-#	  nnoremap <silent><buffer><expr> h
-#	  \ defx#do_action('cd', ['..'])
-#	  nnoremap <silent><buffer><expr> ~
-#	  \ defx#do_action('cd')
-#	  nnoremap <silent><buffer><expr> q
-#	  \ defx#do_action('quit')
-#	  nnoremap <silent><buffer><expr> <Space>
-#	  \ defx#do_action('toggle_select') . 'j'
-#	  nnoremap <silent><buffer><expr> *
-#	  \ defx#do_action('toggle_select_all')
-#	  nnoremap <silent><buffer><expr> j
-#	  \ line('.') == line('$') ? 'gg' : 'j'
-#	  nnoremap <silent><buffer><expr> k
-#	  \ line('.') == 1 ? 'G' : 'k'
-#	  nnoremap <silent><buffer><expr> <C-l>
-#	  \ defx#do_action('redraw')
-#	  nnoremap <silent><buffer><expr> <C-g>
-#	  \ defx#do_action('print')
-#endfunction
-#'''
+[[plugins]]
+repo = 'Shougo/defx.nvim'
+hook_add = '''
+nnoremap <silent>   ;ff
+\ :<C-u>Defx -listed -resume -buffer-name=tab`tabpagenr()`<CR>
+
+autocmd FileType defx call s:defx_my_settings()
+	function! s:defx_my_settings() abort
+	  " Define mappings
+	  nnoremap <silent><buffer><expr> <CR>
+	  \ defx#do_action('open')
+	  nnoremap <silent><buffer><expr> l
+	  \ defx#do_action('open')
+	  nnoremap <silent><buffer><expr> E
+	  \ defx#do_action('open', 'vsplit')
+	  nnoremap <silent><buffer><expr> P
+	  \ defx#do_action('open', 'pedit')
+	  nnoremap <silent><buffer><expr> K
+	  \ defx#do_action('new_directory')
+	  nnoremap <silent><buffer><expr> N
+	  \ defx#do_action('new_file')
+	  nnoremap <silent><buffer><expr> d
+	  \ defx#do_action('remove')
+	  nnoremap <silent><buffer><expr> r
+	  \ defx#do_action('rename')
+	  nnoremap <silent><buffer><expr> h
+	  \ defx#do_action('cd', ['..'])
+	  nnoremap <silent><buffer><expr> ~
+	  \ defx#do_action('cd')
+	  nnoremap <silent><buffer><expr> q
+	  \ defx#do_action('quit')
+	  nnoremap <silent><buffer><expr> <Space>
+	  \ defx#do_action('toggle_select') . 'j'
+	  nnoremap <silent><buffer><expr> *
+	  \ defx#do_action('toggle_select_all')
+	  nnoremap <silent><buffer><expr> j
+	  \ line('.') == line('$') ? 'gg' : 'j'
+	  nnoremap <silent><buffer><expr> k
+	  \ line('.') == 1 ? 'G' : 'k'
+	  nnoremap <silent><buffer><expr> <C-l>
+	  \ defx#do_action('redraw')
+	  nnoremap <silent><buffer><expr> <C-g>
+	  \ defx#do_action('print')
+endfunction
+'''
+hook_source = '''
+call defx#custom#column('mark', {
+        \ 'readonly_icon': '✗',
+        \ 'selected_icon': '✓',
+        \ })
+call defx#custom#column('icon', {
+        \ 'directory_icon': '▸',
+        \ 'opened_icon': '▾',
+        \ 'root_icon': ' ',
+        \ })
+'''
 
 [[plugins]]
 repo = 'iyuuya/denite-rails'
@@ -209,7 +223,7 @@ hook_add = '''
     nmap [denite] <Nop>
     map <C-j> [denite]
     " Keymap
-    nmap <silent> [denite]<C-D> :Denite -buffer-name=gtags_completion gtags_completion<cr>
+    " nmap <silent> [denite]<C-D> :Denite -buffer-name=gtags_completion gtags_completion<cr>
 '''
 
 
