--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,6 +31,7 @@ set-window-option -g window-status-current-bg blue
 set-window-option -g window-status-current-fg black
 set-window-option -g window-status-current-attr bold
 
+set-option -g history-limit 3000
 set-option -g mouse on
 bind -n WheelUpPane if-shell -F -t = "#{mouse_any_flag}" "send-keys -M" "if -Ft= '#{pane_in_mode}' 'send-keys -M' 'select-pane -t=; copy-mode -e; send-keys -M'"
 bind -n WheelDownPane select-pane -t= \; send-keys -M
