--- a/config/dein/plugins.toml
+++ b/config/dein/plugins.toml
@@ -294,23 +294,28 @@ repo = 'tpope/vim-rails.git'
 repo = 'mattn/webapi-vim'
 #[[plugins]]
 #repo = 'fishbullet/deoplete-ruby'
+[[plugins]]
+repo = 'tbodt/deoplete-tabnine'
+on_ft = 'ruby,go,perl,python'
+on_event = ['InsertEnter']
+build = './install.sh'
 
 [[plugins]]
 repo = 'taku-o/vim-copypath'
 
 # [[plugins]]
 # repo = 'uplus/deoplete-solargraph'
-[[plugins]]
-repo = 'zchee/deoplete-go'
-on_event = 'InsertEnter'
-on_ft = 'go'
-
-[[plugins]]
-repo = 'zchee/deoplete-jedi'
-on_ft = 'python'
-hook_source = '''
-let g:deoplete#sources#jedi#enable_typeinfo = 0
-'''
+#[[plugins]]
+#repo = 'zchee/deoplete-go'
+#on_event = 'InsertEnter'
+#on_ft = 'go'
+#
+#[[plugins]]
+#repo = 'zchee/deoplete-jedi'
+#on_ft = 'python'
+#hook_source = '''
+#let g:deoplete#sources#jedi#enable_typeinfo = 0
+#'''
 
 [[plugins]]
 repo = 'autozimu/LanguageClient-neovim'
@@ -450,6 +455,14 @@ hook_add = '''
   let g:eskk#enable_completion = 1
 '''
 
+# vimdiff
+[[plugins]]
+repo = 'rickhowe/diffchar.vim'
+hoook_add = '''
+let g:DiffUnit = 'Char' " any single character
+let g:DiffColors = 3 " 16 colors in fixed order
+'''
+
 # Colors
 [[plugins]] # Template engine vim color scheme
 repo = 'cocopon/pgmnt.vim'
@@ -462,3 +475,4 @@ repo = 'w0ng/vim-hybrid'
 repo = 'altercation/vim-colors-solarized'
 [[plugins]] # monokai
 repo = 'sickill/vim-monokai'
+
