--- a/.tmux.conf
+++ b/.tmux.conf
@@ -147,6 +147,8 @@ set -g status-attr dim
 set -g status-left-length 32
 set -g status-right-length 150
 
+set-option -g focus-events on
+
 set -g status-fg white
 set -g status-bg colour234
 # set -g window-status-activity-attr bold
@@ -154,7 +156,7 @@ set -g pane-border-fg colour245
 set -g pane-active-border-fg colour39
 
 run-shell "powerline-daemon -q"
-source ~/.pyenv/versions/3.6.2/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf
+source ~/.pyenv/versions/neovim-3/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
 set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
 set -g status-left-length 60
