--- a/.tmux.conf
+++ b/.tmux.conf
@@ -10,7 +10,7 @@ bind-key -T copy-mode-vi y send -X copy-pipe-and-cancel "reattach-to-user-namesp
 # set -g status-fg black
 
 set -s escape-time 0
-setw -g window-status-current-attr underscore
+# setw -g window-status-current-attr underscore
 
 # 256色ターミナル
 set-option -g default-terminal screen-256color
@@ -20,16 +20,16 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set-option -g default-shell "${SHELL}"
 set -g default-command "${SHELL}"
 
-set -g pane-active-border-fg white
-set -g pane-active-border-bg black
+# set -g pane-active-border-fg white
+# set -g pane-active-border-bg black
 
-set-window-option -g mode-bg white
-set-window-option -g mode-fg black
-set-window-option -g window-status-bg black
-set-window-option -g window-status-fg white
-set-window-option -g window-status-current-bg blue
-set-window-option -g window-status-current-fg black
-set-window-option -g window-status-current-attr bold
+# set-window-option -g mode-bg white
+# set-window-option -g mode-fg black
+# set-window-option -g window-status-bg black
+# set-window-option -g window-status-fg white
+# set-window-option -g window-status-current-bg blue
+# set-window-option -g window-status-current-fg black
+# set-window-option -g window-status-current-attr bold
 
 set-option -g history-limit 3000
 set-option -g mouse on
@@ -143,7 +143,7 @@ bind l select-pane -t :.+
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 set -g default-command "which reattach-to-user-namespace > /dev/null ; and reattach-to-user-namespace -l $SHELL ; or $SHELL -l"
 
-set -g status-attr dim
+# set -g status-attr dim
 set -g status-left-length 32
 set -g status-right-length 150
 
@@ -152,8 +152,8 @@ set-option -g focus-events on
 set -g status-fg white
 set -g status-bg colour234
 # set -g window-status-activity-attr bold
-set -g pane-border-fg colour245
-set -g pane-active-border-fg colour39
+# set -g pane-border-fg colour245
+# set -g pane-active-border-fg colour39
 
 run-shell "powerline-daemon -q"
 source ~/.pyenv/versions/neovim-3/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
