--- a/config/dein/plugins.toml
+++ b/config/dein/plugins.toml
@@ -346,24 +346,41 @@ repo = 'Xuyuanp/nerdtree-git-plugin'
 [[plugins]] # run commands quickly
 repo = 'thinca/vim-quickrun'
 
+# [[plugins]]
+# repo = 'asvetliakov/vim-easymotion'
+# hook_add = '''
+#   let g:EasyMotion_do_mapping = 0 "Disable default mappings
+#   let g:EasyMotion_use_migemo = 1
+#   let g:EasyMotion_smartcase = 1
+#   " let g:EasyMotion_move_highlight = 0
+# 
+#   " map s <Plug>(easymotion-overwin-f2)
+#   nmap s <Plug>(easymotion-s2)
+# 
+#   nmap <silent> / <Plug>(easymotion-sn)
+#   omap / <Plug>(easymotion-tn)
+# 
+#   " These `n` & `N` mappings are options. You do not have to map `n` & `N` to EasyMotion.
+#   " Without these mappings, `n` & `N` works fine. (These mappings just provide
+#   " different highlight method and have some other features )
+#   map  n <Plug>(easymotion-next)
+#   map  N <Plug>(easymotion-prev)
+# '''
+
+# easymotion like hop
 [[plugins]]
-repo = 'easymotion/vim-easymotion'
+repo = 'phaazon/hop.nvim'
 hook_add = '''
-  let g:EasyMotion_do_mapping = 0 "Disable default mappings
-  let g:EasyMotion_use_migemo = 1
-  let g:EasyMotion_smartcase = 1
-  " let g:EasyMotion_move_highlight = 0
+lua << EOF
+  require'hop'.setup()
+EOF
+" nmap <Leader><Leader> [hop]
+" xmap <Leader><Leader> [hop]
 
-  map s <Plug>(easymotion-overwin-f2)
-
-  map <silent> / <Plug>(easymotion-sn)
-  omap / <Plug>(easymotion-tn)
-
-  " These `n` & `N` mappings are options. You do not have to map `n` & `N` to EasyMotion.
-  " Without these mappings, `n` & `N` works fine. (These mappings just provide
-  " different highlight method and have some other features )
-  map  n <Plug>(easymotion-next)
-  map  N <Plug>(easymotion-prev)
+   nmap s <Plug>:HopWord<CR>
+nnoremap <silent> [hop]w :HopWord<CR>
+nnoremap <silent> [hop]l :HopLine<CR>
+nnoremap <silent> [hop]f :HopChar1<CR>
 '''
 
 [[plugins]]
@@ -431,3 +448,5 @@ repo = 'altercation/vim-colors-solarized'
 [[plugins]] # monokai
 repo = 'sickill/vim-monokai'
 
+[[plugins]]
+repo = 'github/copilot.vim'
