--- a/.tmux.conf
+++ b/.tmux.conf
@@ -139,6 +139,23 @@ bind l select-pane -t :.+
 #unbind '"'
 #bind '"' choose-window
 
+# window の作成, 移動
+bind -n M-c new-window -c "#{pane_current_path}"
+bind -n M-j next-window
+bind -n M-k previous-window
+
+# session の作成, 移動
+bind -n M-C new-session
+bind -n M-l switch-client -n
+bind -n M-h switch-client -p
+
+# pane の分割
+bind -n M-v split-window -h -c "#{pane_current_path}"
+bind -n M-s split-window -v -c "#{pane_current_path}"
+
+bind -n M-a choose-tree
+bind -n M-e choose-session
+bind -n M-w choose-tree -w
 # Reattach each new window to the user bootstrap namespace
 # https://github.com/ChrisJohnsen/tmux-MacOSX-pasteboard
 set -g default-command "which reattach-to-user-namespace > /dev/null ; and reattach-to-user-namespace -l $SHELL ; or $SHELL -l"
@@ -158,6 +175,6 @@ set -g status-bg colour234
 run-shell "powerline-daemon -q"
 source ~/.pyenv/versions/neovim-3/lib/python3.8/site-packages/powerline/bindings/tmux/powerline.conf
 set -g status-interval 2
-set -g status-left "#S #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
+set -g status-left "#[fg=colour108,bg=colour237,bold] [#S:#I:#P]  #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
 set -g status-left-length 60
 
