--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,15 @@
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'tmux-plugins/tmux-sensible'
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+# ペイン内容の保存をONに
+set -g @resurrect-capture-pane-contents 'on'
+# 例えば、makeコマンドでの開発サーバやpythonのREPLを起動することが多いので以下設定をしています
+set -g @resurrect-processes '"~make" "~python"'
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+# tmux起動時の自動リストアをONに
+set -g @continuum-restore 'on'
 
 #utf setting
 set-window-option -g mode-keys vi
@@ -177,4 +189,7 @@ source ~/.pyenv/versions/neovim-3/lib/python3.8/site-packages/powerline/bindings
 set -g status-interval 2
 set -g status-left "#[fg=colour108,bg=colour237,bold] [#S:#I:#P]  #[fg=green,bg=black]#(tmux-mem-cpu-load --colors -p -a 0 --interval 2)#[default]"
 set -g status-left-length 60
+
+# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
+run '~/.tmux/plugins/tpm/tpm'
 
